test/corpus/edition.txt
================================================================================
Edition directive
================================================================================

edition = "2023";

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content))))

================================================================================
Edition 2024 directive
================================================================================

edition = "2024";

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content))))

================================================================================
Comments
================================================================================

// This comment is okay
edition = "2023"; // And this one

/* and this
 one */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (edition
    (string
      (string_content)))
  (comment)
  (comment))
