test/corpus/group.txt
================================================================================
Group field
================================================================================

syntax = "proto2";

message Outer {
  repeated group Inner = 1 {
    required int32 ival = 1;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (group
        (message_name
          (identifier))
        (field_number
          (int_lit
            (decimal_lit)))
        (message_body
          (field
            (type)
            (identifier)
            (field_number
              (int_lit
                (decimal_lit)))))))))

================================================================================
Group field with options
================================================================================

syntax = "proto2";

message Outer {
  optional group WithOptions = 9 [deprecated = true] {
    optional int32 ival = 1;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (group
        (message_name
          (identifier))
        (field_number
          (int_lit
            (decimal_lit)))
        (field_options
          (field_option
            (identifier)
            (constant
              (bool
                (true)))))
        (message_body
          (field
            (type)
            (identifier)
            (field_number
              (int_lit
                (decimal_lit)))))))))
