test/corpus/import.txt
================================================================================
Import
================================================================================

syntax = "proto3";

import "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (import
    (string
      (string_content))))

================================================================================
Import weak
================================================================================

syntax = "proto3";

import weak "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (import
    (string
      (string_content))))

================================================================================
Import public
================================================================================

syntax = "proto3";

import public "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (import
    (string
      (string_content))))

================================================================================
Import option
================================================================================

edition = "2024";

import option "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content)))
  (import
    (string
      (string_content))))

================================================================================
Import with escapes
================================================================================

syntax = "proto3";

import 'bar\'.proto';
import public "foo\".proto";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (import
    (string
      (string_content)
      (escape_sequence)
      (string_content)))
  (import
    (string
      (string_content)
      (escape_sequence)
      (string_content))))
