test/corpus/message.txt
================================================================================
Export message
================================================================================

edition = "2024";

export message Foo {}

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body)))

================================================================================
Local message
================================================================================

edition = "2024";

local message Foo {}

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body)))

================================================================================
Message
================================================================================

syntax = "proto3";

message Outer {
  option (my_option).a = true;
  message Inner {
    int64 ival = 1;
  }
  repeated Inner inner_message = 2;
  EnumAllowingAlias enum_field =3;
  map<int32, string> my_map = 4;
  reserved 10, 15, 20 to 30;
  reserved "foo", "bar";
  reserved 'baz';
  reserved foobaz;
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (option
        (full_ident
          (identifier))
        (identifier)
        (constant
          (bool
            (true))))
      (message
        (message_name
          (identifier))
        (message_body
          (field
            (type)
            (identifier)
            (field_number
              (int_lit
                (decimal_lit))))))
      (field
        (type
          (message_or_enum_type
            (identifier)))
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (field
        (type
          (message_or_enum_type
            (identifier)))
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (map_field
        (key_type)
        (type)
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (reserved
        (ranges
          (range
            (int_lit
              (decimal_lit)))
          (range
            (int_lit
              (decimal_lit)))
          (range
            (int_lit
              (decimal_lit))
            (int_lit
              (decimal_lit)))))
      (reserved
        (reserved_field_names
          (reserved_identifier)
          (reserved_identifier)))
      (reserved
        (reserved_field_names
          (reserved_identifier)))
      (reserved
        (reserved_field_names
          (reserved_identifier))))))

================================================================================
Field types qualified by a keyword-named package
================================================================================

syntax = "proto2";

message Foo {
  message.v1.Bar a = 1;
  optional enum.v1.Baz b = 2;
  extend.v1.Bar c = 3;
  oneof choice {
    option.v1.Bar d = 4;
  }
  extend .foo.Bar {
    optional int32 e = 5;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (field
        (type
          (message_or_enum_type
            (identifier)
            (identifier)
            (identifier)))
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (field
        (type
          (message_or_enum_type
            (identifier)
            (identifier)
            (identifier)))
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (field
        (type
          (message_or_enum_type
            (identifier)
            (identifier)
            (identifier)))
        (identifier)
        (field_number
          (int_lit
            (decimal_lit))))
      (oneof
        (identifier)
        (oneof_field
          (type
            (message_or_enum_type
              (identifier)
              (identifier)
              (identifier)))
          (identifier)
          (field_number
            (int_lit
              (decimal_lit)))))
      (extend
        (full_ident
          (identifier)
          (identifier))
        (message_body
          (field
            (type)
            (identifier)
            (field_number
              (int_lit
                (decimal_lit)))))))))
