test/corpus/oneof.txt
================================================================================
Oneof
================================================================================

syntax = "proto3";

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    SubMessage sub_message = 9;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (oneof
        (identifier)
        (oneof_field
          (type)
          (identifier)
          (field_number
            (int_lit
              (decimal_lit))))
        (oneof_field
          (type
            (message_or_enum_type
              (identifier)))
          (identifier)
          (field_number
            (int_lit
              (decimal_lit))))))))

================================================================================
Oneof with option
================================================================================

syntax = "proto3";

message SampleMessage {
  oneof test_oneof {
    option (my_option) = true;
    string name = 4;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (oneof
        (identifier)
        (option
          (full_ident
            (identifier))
          (constant
            (bool
              (true))))
        (oneof_field
          (type)
          (identifier)
          (field_number
            (int_lit
              (decimal_lit))))))))

================================================================================
Oneof with a group
================================================================================

syntax = "proto2";

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    group OneofGroup = 720 {
      optional string field = 721;
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (oneof
        (identifier)
        (oneof_field
          (type)
          (identifier)
          (field_number
            (int_lit
              (decimal_lit))))
        (group
          (message_name
            (identifier))
          (field_number
            (int_lit
              (decimal_lit)))
          (message_body
            (field
              (type)
              (identifier)
              (field_number
                (int_lit
                  (decimal_lit))))))))))

================================================================================
Oneof with a stray semicolon
================================================================================

syntax = "proto3";

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    ;
  }
}

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (message
    (message_name
      (identifier))
    (message_body
      (oneof
        (identifier)
        (oneof_field
          (type)
          (identifier)
          (field_number
            (int_lit
              (decimal_lit))))
        (empty_statement)))))
