test/corpus/option.txt
================================================================================
Option
================================================================================

syntax = "proto3";

option go_package = "foo";
option java_multiple_files = true;
option int_dec_lit = 42;
option int_oct_lit = 070;
option int_hex_lit = 0xDEADBEEF;
option int_neg_hex_lit = -0xDEADBEEF;
option int_pos_hex_lit = +0xDEADBEEF;
option int_float_lit = 1.2345;

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (option
    (identifier)
    (constant
      (string
        (string_content))))
  (option
    (identifier)
    (constant
      (bool
        (true))))
  (option
    (identifier)
    (constant
      (int_lit
        (decimal_lit))))
  (option
    (identifier)
    (constant
      (int_lit
        (octal_lit))))
  (option
    (identifier)
    (constant
      (int_lit
        (hex_lit))))
  (option
    (identifier)
    (constant
      (int_lit
        (hex_lit))))
  (option
    (identifier)
    (constant
      (int_lit
        (hex_lit))))
  (option
    (identifier)
    (constant
      (float_lit))))

================================================================================
Option name with an extension in the middle of the path
================================================================================

edition = "2023";

option features.(pb.go).api_level = API_OPAQUE;
option features.(pb.java).utf8_validation = VERIFY;

--------------------------------------------------------------------------------

(source_file
  (edition
    (string
      (string_content)))
  (option
    (identifier)
    (full_ident
      (identifier)
      (identifier))
    (identifier)
    (constant
      (full_ident
        (identifier))))
  (option
    (identifier)
    (full_ident
      (identifier)
      (identifier))
    (identifier)
    (constant
      (full_ident
        (identifier)))))

================================================================================
Option name with a fully-qualified extension
================================================================================

syntax = "proto2";

option (.foo.bar.baz) = 1;
option (another).thing.(.foo.bar.Thing.Nested.one) = "one";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (option
    (full_ident
      (identifier)
      (identifier)
      (identifier))
    (constant
      (int_lit
        (decimal_lit))))
  (option
    (full_ident
      (identifier))
    (identifier)
    (full_ident
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (identifier))
    (constant
      (string
        (string_content)))))

================================================================================
Adjacent string literals
================================================================================

syntax = "proto3";

option foo = "a" 'b\n' "";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (option
    (identifier)
    (constant
      (string
        (string_content)
        (string_content)
        (escape_sequence)))))
