test/corpus/package.txt
================================================================================
Package
================================================================================

syntax = "proto3";

package foo ;

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (package
    (full_ident
      (identifier))))

================================================================================
Package with multiple parts
================================================================================

syntax = "proto3";

package foo.bar;

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)))
  (package
    (full_ident
      (identifier)
      (identifier))))
