test/corpus/syntax.txt
================================================================================
Syntax directive
================================================================================

syntax = "proto3";

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content))))

================================================================================
Comments
================================================================================

// This comment is okay
syntax = "proto3"; // And this one

/* and this
 one */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (syntax
    (string
      (string_content)))
  (comment)
  (comment))

================================================================================
Single-quoted syntax directive
================================================================================

syntax = 'proto3';

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content))))

================================================================================
Concatenated syntax directive
================================================================================

syntax = "pro" 'to3';

--------------------------------------------------------------------------------

(source_file
  (syntax
    (string
      (string_content)
      (string_content))))
